# Gym-Community-App

./: .gitignore  README.md
Frontend-For-APP/: app.json  package-lock.json  package.json
Frontend-For-APP/app/: index.jsx
backend/: .env.example  pyproject.toml  requirements.txt
