[project]
name = "gym-community-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1", # this is for interacting with database
    "fastapi>=0.128.0",
    "fastapi-users[sqlalchemy]>=15.0.3", #used for authentication and login
    "imagekitio>=5.1.1", #handle images and vidoes
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0", # a webserver in python that allows us to serve our fast API application
]
